JWT기반 인증서버 구축 완

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// https://mvnrepository.com/artifact/com.auth0/java-jwt
+	//JWT 토큰을 쉽게 만들어주는 라이브러리
+	implementation 'com.auth0:java-jwt:3.19.2'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
